--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,32 @@
-<p>
-  about page!
-</p>
+<section id="about" class="container-fluid" class="row">
+<br>
+<br>
+  <div class="col-sm-1"></div>
+  <div id="pic" class="col-sm-4"></div>
+  <div class="col-sm-6">
+    <h2>My Story</h2>
+    <hr class="my-4">
+    <div class="aboutText">
+      
+        <br>
+        <span>Hello!  My name is Jimmy Jimerton! After being lost at sea for five decades, and then stranded on a volcanic island covered in nothing but basalt for another eight decades, I finally made my way home and have devoted the remainder of my life to digging in soft furtile earth!</span>
+    
+    </div>
+
+    <hr class="my-2">
+
+
+  </div>
+</section>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+  crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+  crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+  crossorigin="anonymous"></script>
